# share

./: DECODER.v  imem.init
LA32R-Simulation-Framework/: CMakeLists.txt  main.cpp  sim.sh
LA32R-Simulation-Framework/include/: configs.hpp  dpi_c.hpp  output_format.hpp  rtl_top.hpp  sim_io.hpp  sim_top.hpp  simulator.hpp
LA32R-Simulation-Framework/mem_init/: imem.init
LA32R-Simulation-Framework/rtl_top/: CMakeLists.txt  dpi_c.cpp  rtl_top.cpp
LA32R-Simulation-Framework/rtl_top/vtop/: VTop.cmake  VTop.cpp  VTop.h  VTop__Dpi.h  VTop__Syms.h  VTop__Trace__0.cpp  VTop__Trace__0__Slow.cpp  VTop___024root.h  VTop___024root__DepSet_h0d2e5939__0.cpp  VTop___024root__DepSet_h0d2e5939__0__Slow.cpp  VTop___024root__DepSet_hc590b6dd__0.cpp  VTop___024root__DepSet_hc590b6dd__0__Slow.cpp  VTop___024root__Slow.cpp  VTop___024unit.h  VTop___024unit__DepSet_h1b4533a7__0__Slow.cpp  VTop___024unit__DepSet_hd7ebdb33__0.cpp  VTop___024unit__Slow.cpp  VTop__ver.d  verilator_args.txt
LA32R-Simulation-Framework/simulator/: CMakeLists.txt
LA32R-Simulation-Framework/vsrc/: top.v
LA32R-Simulation-Framework/vsrc/configs/: configs.vh
LA32R-Simulation-Framework/vsrc/mem_ip_sim/: data_mem.v  inst_mem.v
LA32R-Simulation-Framework/vsrc/your_vsrc/: ADD4.v  ALU.v  DECODE.v  DECODER.v  MUX.v  REGFILE.v
lab3/your_vsrc/: CPU.v  MUX.v  PC.v
lab4/: configs.vh  imem.init
lab4/your_include/: br_type.vh  dmem_type.vh  inst_type.vh
lab5/: la_1.init  la_2.init
lab6/: configs.vh  copy.bat  la_T2.init  la_T4.init
vsrc/: TOP.v
your_vsrc/: ALU.v  CPU.v  DECODER.v  MUX1.v  PC.v  RF.v
(+46 files in other folders)
